--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
         pip install pylint openai playsound        
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        find . -name \*.py -exec pylint {} \+
